tests/fails/f46.t

terra foo()
  var a,b,c
end
foo()